--- a/Project0_Data_Python/EJERCICIOS/02-strings.ipynb
+++ b/Project0_Data_Python/EJERCICIOS/02-strings.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,9 @@
     }
    ],
    "source": [
-    "c"
+    "texto = \"Hola Mundo\"\n",
+    "\n",
+    "print(texto.startswith(\"Hola\"))"
    ]
   },
   {
