--- a/Project0_Data_Python/EJERCICIOS/08-bucles-for.ipynb
+++ b/Project0_Data_Python/EJERCICIOS/08-bucles-for.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -304,10 +304,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pares': 5, 'impares': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista10 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "contador_numeros = {\n",
+    "    \"pares\" : 0,\n",
+    "    \"impares\" : 0\n",
+    "}\n",
+    "for n in lista10:\n",
+    "    if n % 2 == 0:\n",
+    "        contador_numeros['pares'] += 1\n",
+    "    else:\n",
+    "        contador_numeros['impares'] += 1\n",
+    "\n",
+    "print(contador_numeros)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -318,10 +340,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[38], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIntroduce un número entero positivo: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m suma_primos \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m num \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2\u001b[39m, n \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m):\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Introduce un número entero positivo: \"))\n",
+    "suma_primos = 0\n",
+    "\n",
+    "for num in range(2, n + 1):\n",
+    "    es_primo = True\n",
+    "\n",
+    "    for i in range(2, num):\n",
+    "        if num % i == 0:\n",
+    "            es_primo = False\n",
+    "            break\n",
+    "\n",
+    "    if es_primo:\n",
+    "        suma_primos += num\n",
+    "\n",
+    "print(f\"La suma de todos los números primos menores o iguales a {n} es: {suma_primos}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,8 +392,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_asteriscos = int(input(\"Dime el numero de asteriscos\"))\n",
+    "\n",
+    "for i in range(1, n_asteriscos + 1,):\n",
+    "    texto = \"\"\n",
+    "    for j in range(i):\n",
+    "        texto += \"*\"\n",
+    "    \n",
+    "    print(texto)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -356,8 +427,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'la': 3, 'vaca': 4, 'de': 2, 'corre': 1, 'tras': 1, 'que': 1, 'anda': 1, 'ciones': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "\n",
+    "texto = \"La vaca de la vaca corre tras la vaca que anda de vaca ciones\"\n",
+    "\n",
+    "texto_sinPuntuacion = ''.join([char for char in texto if char not in string.punctuation])\n",
+    "\n",
+    "palabras = texto_sinPuntuacion.lower().split()\n",
+    "\n",
+    "\n",
+    "resultado = {}\n",
+    "for palabra in palabras:\n",
+    "    if palabra in resultado:\n",
+    "        resultado[palabra] += 1\n",
+    "\n",
+    "    else:\n",
+    "        resultado[palabra] = 1\n",
+    "\n",
+    "print(resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -370,8 +468,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rango elegido 0 - 4. \n",
+      "Suma Pares: 6 \n",
+      "Suma Impares: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1, n2 = 1, 0\n",
+    "\n",
+    "while not(n1 <= n2):\n",
+    "    n1, n2 = map(int,input(\"Introduce 2 numeros (principio-fin) separados mediante el caracter -\").split('-'))\n",
+    "\n",
+    "resultado = {\n",
+    "    \"pares\" : 0,\n",
+    "    \"impares\" : 0\n",
+    "}\n",
+    "for n in range(n1,n2+1):\n",
+    "    if n % 2 == 0:\n",
+    "        resultado['pares'] += n\n",
+    "    else:\n",
+    "        resultado['impares'] += n\n",
+    "\n",
+    "print(f\"Rango elegido {n1} - {n2}. \\nSuma Pares: {resultado['pares']} \\nSuma Impares: {resultado['impares']}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,8 +509,37 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero 2 SI es primo\n",
+      "\n",
+      "El numero 3 SI es primo\n",
+      "\n",
+      "El numero 4 NO es primo\n",
+      "\n",
+      "El numero 5 SI es primo\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Introduce un número entero positivo: \"))\n",
+    "\n",
+    "for num in range(2, n + 1):\n",
+    "    es_primo = True\n",
+    "\n",
+    "    for i in range(2, num):\n",
+    "        if num % i == 0:\n",
+    "            es_primo = False\n",
+    "            print(f\"El numero {num} NO es primo\\n\")\n",
+    "            break\n",
+    "\n",
+    "    if es_primo:\n",
+    "        print(f\"El numero {num} SI es primo\\n\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,8 +552,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 200, 270.0, 360.0, 450.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_precios = [100, 200, 300, 400, 500]\n",
+    "\n",
+    "lista_precios_rebajados = []\n",
+    "for precio in lista_precios:\n",
+    "    if precio > 250:\n",
+    "        lista_precios_rebajados.append(precio - (precio * 0.1))\n",
+    "    else:\n",
+    "        lista_precios_rebajados.append(precio)\n",
+    "\n",
+    "print(lista_precios_rebajados)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -412,8 +585,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estudiante_0 --> Aprobado (85)\n",
+      "Estudiante_1 --> Aprobado (92)\n",
+      "Estudiante_2 --> Reprobado (78)\n",
+      "Estudiante_3 --> Aprobado (90)\n",
+      "Estudiante_4 --> Aprobado (88)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_calificaciones = [85, 92, 78, 90, 88]\n",
+    "\n",
+    "for i, calif in enumerate(lista_calificaciones):\n",
+    "    estudiante = \"Estudiante_\" + str(i)\n",
+    "\n",
+    "    if calif >= 80:\n",
+    "        print(f\"{estudiante} --> Aprobado ({calif})\")\n",
+    "    else:\n",
+    "        print(f\"{estudiante} --> Reprobado ({calif})\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -424,9 +619,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 NO divisible por 5\n",
+      "3 NO divisible por 5\n",
+      "4 NO divisible por 5\n",
+      "5 SI divisible por 5\n",
+      "6 NO divisible por 5\n",
+      "7 NO divisible por 5\n",
+      "8 NO divisible por 5\n",
+      "9 NO divisible por 5\n",
+      "10 SI divisible por 5\n",
+      "11 NO divisible por 5\n",
+      "12 NO divisible por 5\n",
+      "13 NO divisible por 5\n",
+      "14 NO divisible por 5\n",
+      "\n",
+      "(RESULTADO) Numero mayor divisible entre 5 entre los numeros 1 y 15 --> 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1, n2 = map(int,input(\"Introduce 2 numeros (principio-fin) separados mediante ','\").split(','))\n",
+    "divisor = int(input(\"Ahora el numero divisor\"))\n",
+    "\n",
+    "divisores = []\n",
+    "for n in range(n1+1,n2): #como dice en el rango, el n1 y el n2, no estan incluidos\n",
+    "    if n % divisor == 0:\n",
+    "        divisores.append(n)\n",
+    "        print(f\"{n} SI divisible por {divisor}\")\n",
+    "    else:\n",
+    "        print(f\"{n} NO divisible por {divisor}\")\n",
+    "\n",
+    "print(f\"\\n(RESULTADO) Numero mayor divisible entre {divisor} entre los numeros {n1} y {n2} --> {max(divisores)}\")"
+   ]
   }
  ],
  "metadata": {
