--- a/Project0_Data_Python/EJERCICIOS/BONUS/bonus-diccionarios.ipynb
+++ b/Project0_Data_Python/EJERCICIOS/BONUS/bonus-diccionarios.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,10 +635,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Altitud quinta localizacion -->  250 m\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Altitud quinta localizacion --> \", response['localizaciones'][4]['altitud'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -649,10 +659,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre ultima localizacion -->  Toulouse\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Nombre ultima localizacion --> \", response['localizaciones'][-1]['nombre'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -663,10 +683,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fecha penultima localizacion -->  04/07/2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Fecha penultima localizacion --> \", response['localizaciones'][-2]['fecha'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -677,16 +707,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipo antepenultima localizacion -->  Etapa\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Tipo antepenultima localizacion --> \", response['localizaciones'][-3]['tipo'])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 24. ¿Cuál es la distancia de la cuarta localización?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distancia cuarta localizacion -->  220 km\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Distancia cuarta localizacion --> \", response['localizaciones'][3]['distancia'])"
    ]
   }
  ],
