--- a/Project0_Data_Python/EJERCICIOS/BONUS/bonus-bag-words.ipynb
+++ b/Project0_Data_Python/EJERCICIOS/BONUS/bonus-bag-words.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,10 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Desde ahora Data es tu aliado.', 'Data solo es una palabra, tu no.', 'Data es el camino.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corpus)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +71,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Desde ahora Data es tu aliado', 'Data solo es una palabra tu no', 'Data es el camino']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "\n",
+    "for i, cadena in enumerate(corpus):\n",
+    "    corpus[i] = \"\".join(caracter for caracter in cadena if caracter not in string.punctuation)\n",
+    "\n",
+    "print(corpus)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,10 +100,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['desde ahora data es tu aliado', 'data solo es una palabra tu no', 'data es el camino']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, cadena in enumerate(corpus):\n",
+    "    corpus[i] = \"\".join(caracter.lower() for caracter in cadena)\n",
+    "\n",
+    "print(corpus)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,9 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bag_of_words -->   ['desde', 'ahora', 'data', 'es', 'tu', 'aliado', 'solo', 'una', 'palabra', 'no', 'el', 'camino']\n",
+      "Bag_of_words2 -->  ['data', 'desde', 'solo', 'el', 'no', 'una', 'camino', 'palabra', 'ahora', 'es', 'tu', 'aliado']\n"
+     ]
+    }
+   ],
    "source": [
     "bag_of_words = []\n",
     "\n",
@@ -102,19 +149,39 @@
     "\n",
     "    for word in content:  # Para cada palabra, compruebo si la tengo\n",
     "        if word not in bag_of_words:\n",
-    "            bag_of_words.append(word.lower())"
+    "            bag_of_words.append(word.lower())\n",
+    "\n",
+    "\n",
+    "    #en la seccion anterior, la comprobacion esta erronea ya que solo se pone en minuscula la palabra al añadirla, por lo que palabras como 'Data'\n",
+    "    #la anade en minuscula (data) y luego al volver a aparecer como \"Data\" (con la D en mayus) pues la anade repetida.\n",
+    "    #en este caso al texto estar ya en minusculas no pasa nada, pero bueno, seria solo anadir el .lower() al if.\n",
+    "\n",
+    "    #yo por practicar, lo hare separando las palabras conviertiendolas en minus y luego creando un set para convertirlo de nuevo en una lista y\n",
+    "    # asi se eliminen las repes\n",
+    "    bag_of_words2 = []\n",
+    "    for content in corpus:\n",
+    "        content = content.split(\" \")\n",
+    "        \n",
+    "        for word in content:\n",
+    "            bag_of_words2.append(word.lower())\n",
+    "\n",
+    "bag_of_words2 = list(set(bag_of_words2))\n",
+    "\n",
+    "#por lo que nos quedaria\n",
+    "print(\"Bag_of_words -->  \", bag_of_words)\n",
+    "print(\"Bag_of_words2 --> \", bag_of_words2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['desde', 'ahora', 'data', 'es', 'tu', 'aliado.', 'data', 'solo', 'una', 'palabra,', 'no.', 'data', 'el', 'camino.']\n"
+      "['desde', 'ahora', 'data', 'es', 'tu', 'aliado', 'solo', 'una', 'palabra', 'no', 'el', 'camino']\n"
      ]
     }
    ],
@@ -148,10 +215,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['desde', 'ahora', 'data', 'es', 'tu', 'aliado', 'data', 'solo', 'es', 'una', 'palabra', 'tu', 'no', 'data', 'es', 'el', 'camino']\n",
+      "Conteo de palabras -->  {'desde': 1, 'ahora': 1, 'data': 3, 'es': 3, 'tu': 2, 'aliado': 1, 'solo': 1, 'una': 1, 'palabra': 1, 'no': 1, 'el': 1, 'camino': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#voy a crear la lista de palabras de nuevo sin la comprobacion de si la palabra ya existe\n",
+    "bag_of_words = []\n",
+    "for content in corpus:\n",
+    "    content = content.split(\" \")\n",
+    "    \n",
+    "    for word in content:\n",
+    "        bag_of_words.append(word.lower())\n",
+    "\n",
+    "print(bag_of_words)\n",
+    "\n",
+    "resultado = {}\n",
+    "for palabra in bag_of_words:\n",
+    "    if palabra not in resultado:\n",
+    "        resultado[palabra] = bag_of_words.count(palabra)\n",
+    "\n",
+    "print(\"Conteo de palabras --> \",resultado)"
+   ]
   }
  ],
  "metadata": {
@@ -170,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
