--- a/Project0_Data_Python/EJERCICIOS/BONUS/bonus-diccionarios.ipynb
+++ b/Project0_Data_Python/EJERCICIOS/BONUS/bonus-diccionarios.ipynb
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
     }
    ],
    "source": [
-    "loc_mayor_distancia = max(response['localizaciones'], key=lambda loc: int(loc['distancia'].split(\" \")[0]))\n",
+    "loc_mayor_distancia = max(response['localizaciones'], key=lambda loc: loc['distancia'])\n",
     "\n",
     "print(loc_mayor_distancia)"
    ]
