--- a/Project0_Data_Python/EJERCICIOS/BONUS/bonus-tienda.ipynb
+++ b/Project0_Data_Python/EJERCICIOS/BONUS/bonus-tienda.ipynb
@@ -30,10 +30,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precio final de la compra: 80.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "precio = float(input(\"Introduce el precio del articulo\"))\n",
+    "cupon = input(\"Cuenta con algun cupon de descuento?\")\n",
+    "\n",
+    "if cupon.lower() == \"si\":\n",
+    "    descuento = float(input(\"Ingresa el valor del cupon de descuento\"))\n",
+    "    precio = precio - (precio * descuento / 100)\n",
+    "\n",
+    "print(f\"Precio final de la compra: {precio}€\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precio final de la compra: 70.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "precio = float(input(\"Introduce el precio del articulo\"))\n",
+    "cupon = input(\"Cuenta con algun cupon de descuento?\")\n",
+    "\n",
+    "if cupon.lower() == \"si\":\n",
+    "    descuento = input(\"Ingresa el porcentaje del cupon de descuento. Ejemplo: 30%)\")\n",
+    "    descuento = descuento.replace(\"%\", \"\") if \"%\" in descuento else descuento\n",
+    "    precio = precio - (precio * float(descuento) / 100)\n",
+    "\n",
+    "print(f\"Precio final de la compra: {precio}€\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +93,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lo sentimos, el MAYOR DESCUENTO EXISTENTE es de hasta el 50%.\n",
+      "Este sera el que se aplicara.\n",
+      "Precio final de la compra: 50.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "precio = float(input(\"Introduce el precio del articulo\"))\n",
+    "cupon = input(\"Cuenta con algun cupon de descuento?\")\n",
+    "\n",
+    "if cupon.lower() == \"si\":\n",
+    "    descuento = input(\"Ingresa el porcentaje del cupon de descuento. Ejemplo: 30%)\")\n",
+    "    descuento = float(descuento.replace(\"%\", \"\")) if \"%\" in descuento else float(descuento)\n",
+    "\n",
+    "    if descuento < 5:\n",
+    "        print(\"Ha debido de haber un error, el DESCUENTO MINIMO al contar con un cupon es del 5%.\\nPor lo que sera el que se aplicara.\")\n",
+    "        descuento = 5\n",
+    "\n",
+    "    if descuento > 50:\n",
+    "        print(\"Lo sentimos, el MAYOR DESCUENTO EXISTENTE es de hasta el 50%.\\nEste sera el que se aplicara.\")\n",
+    "        descuento = 50\n",
+    "\n",
+    "    precio = precio - (precio * descuento / 100)\n",
+    "\n",
+    "print(f\"Precio final de la compra: {precio}€\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +136,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monto final de la compra: 150.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena_producos = \"\"\n",
+    "\n",
+    "respuesta = \"\"\n",
+    "while respuesta != \"terminar\":\n",
+    "    respuesta = input(\"Introduzca el precio de su articulo y separado mediante un espacio, su descuento en caso de contar con el. Para terminar escriba la palabra 'terminar'\")\n",
+    "    if respuesta != \"terminar\":\n",
+    "        cadena_producos += respuesta + \",\"\n",
+    "\n",
+    "productos_descuentos = cadena_producos.split(\",\")\n",
+    "productos_descuentos.pop() #eliminamos el ultimo elemento ya que este siempre queda vacio al separar por comas en este caso\n",
+    "\n",
+    "monto_total = 0.00\n",
+    "for producto in productos_descuentos:\n",
+    "    precio, descuento = producto.split(\" \") #aqui estoy dando por sentado que se tiene descuento para todos los productos\n",
+    "    monto_total += float(precio) - (float(precio) * float(descuento) / 100)\n",
+    "\n",
+    "print(f\"Monto final de la compra: {monto_total}€\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,10 +176,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precio del producto: 100.0€\n",
+      "Precio final del producto por pertenecer a la categoria ropa: 80.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "categorias_descuentos = {\n",
+    "    'juguete': 40,\n",
+    "    'electronica': 10,\n",
+    "    'ropa': 20\n",
+    "}\n",
+    "\n",
+    "precio = float(input(\"Ingrese el precio de su articulo\"))\n",
+    "categoria = input(\"Ingrese la categoria a la que pertenece\").lower()\n",
+    "\n",
+    "precio_final = precio - (precio * categorias_descuentos[categoria] / 100)\n",
+    "\n",
+    "print(f\"Precio del producto: {precio}€\")\n",
+    "print(f\"Precio final del producto por pertenecer a la categoria {categoria}: {precio_final}€\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,10 +213,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precio final de la compra por ser Monday: 108.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "hoy = datetime.datetime.today().weekday()\n",
+    "\n",
+    "precio_producto = 120.0\n",
+    "\n",
+    "descuento = 0.10 if (0 <= hoy <= 4) else 0.15\n",
+    "\n",
+    "precio_final = precio_producto - (precio_producto * descuento)\n",
+    "\n",
+    "print(f\"Precio final de la compra por ser {datetime.datetime.now().strftime(\"%A\")}: {precio_final}€\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +249,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precio final de la compra 95.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "credenciales = ('USUARIO', 'USUARIO123')\n",
+    "\n",
+    "precio_producto = 100\n",
+    "\n",
+    "nombre_user = input(\"Ingrese su nombre de usuario\")\n",
+    "pass_user = input(\"Ingrese su contrasena\")\n",
+    "\n",
+    "if nombre_user == credenciales[0] and pass_user == credenciales[1]:\n",
+    "    precio_producto = precio_producto - (precio_producto * 0.05)\n",
+    "\n",
+    "print(f\"Precio final de la compra {precio_producto}€\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +283,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El precio totol de la compra es de: 108.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena_productos = input(\"ingresa los precios de los productos adquiridos separados por un espacio\")\n",
+    "\n",
+    "precios = cadena_productos.split(\" \")\n",
+    "precios = [int(precio) for precio in precios]\n",
+    "\n",
+    "descuento = 0.1 if len(precios) > 5 else 0\n",
+    "\n",
+    "suma_precios = sum(precios)\n",
+    "\n",
+    "precio_final = suma_precios - (suma_precios * descuento)\n",
+    "\n",
+    "print(f\"El precio totol de la compra es de: {precio_final}€\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,10 +318,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El precio de la final de la compra (345.5) es --> 310.95€\n"
+     ]
+    }
+   ],
+   "source": [
+    "precio_compra = 345.5\n",
+    "\n",
+    "precio_final = precio_compra\n",
+    "if 100 < precio_compra < 200:\n",
+    "    precio_final = precio_final - (precio_final * 0.05)\n",
+    "\n",
+    "if 200 < precio_compra < 500:\n",
+    "    precio_final = precio_final - (precio_final * 0.1)\n",
+    "\n",
+    "if 500 < precio_compra:\n",
+    "    precio_final = precio_final - (precio_final * 0.15)\n",
+    "\n",
+    "print(f\"El precio de la final de la compra ({precio_compra}) es --> {precio_final}€\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +354,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precio final tras pagar mediante tarjeta --> 154.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "precio_producto = 200.0\n",
+    "\n",
+    "descuento = float(input(\"Ingrese el descuento del producto\"))\n",
+    "descuento = descuento / 100\n",
+    "metodo_pago = input(\"Introduzca su metodo de pago (tarjeta - efectivo)\")\n",
+    "\n",
+    "descuento_metodo_pago = 0.03 if metodo_pago.lower() == \"tarjeta\" else 0\n",
+    "\n",
+    "precio_final = precio_producto - (precio_producto * (descuento + descuento_metodo_pago))\n",
+    "\n",
+    "print(f\"Precio final tras pagar mediante {metodo_pago} --> {precio_final}€\")"
+   ]
   }
  ],
  "metadata": {
@@ -180,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
